--- a/gal.css
+++ b/gal.css
@@ -29,10 +29,13 @@ body{
     line-height: 135%;
     text-align: center;
 }
-img{
+#one #two #thre #four #five #six
+, article img{
     max-width: 100%;
     height: auto;
     border-radius:40px;
+    float: left;
+    padding: 1%;
 }
 header, footer{
     width:98%;
@@ -51,7 +54,7 @@ nav{
 }
 footer{
     border-top: 2px solid #bfbbbb;
-    margin-top: 10px;
+    margin-top: 7%;
     padding: 1%;
     padding-bottom: 2%;
 }
@@ -75,18 +78,18 @@ footer img{
     background-color: #ccc4c4;
 }
 @media(min-width:900px){
-#menu #center #left{
+#one #two #thre #four #five #six{
     width: 31.33333%;
     margin-right: 2%;
     }}
 @media(max-width:899px) and (min-width:700px){
-#menu #center #left{
+#one #two #thre #four #five #six{
     width: 80%;
     margin-left: 10%;
     margin-bottom: 10px;
     }}
 @media(max-width:699px){
-#menu #center #left{
+#one #two #thre #four #five #six{
     width: 100%;
     margin-bottom: 10px;
     }}
